# Bolt-Download-Manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  output.txt  performance_results.csv  test_compile.cpp  vcpkg-configuration.json  vcpkg.json
browser-extension/: README.md  background.js  com.boltdm.host.json  dialog.html  dialog.js  install.bat  manifest.json  popup.html  popup.js  update-extension-id.bat
browser/chrome/: background.js  content.js  manifest.json  popup.html  popup.js
browser/registry/: bolt-chrome-host.json
cmake/: VersionIncrement.cmake
docs/: benchmark.csv
include/bolt/: version.hpp
include/bolt/browser/: native_host.hpp
include/bolt/cli/: commands.hpp  progress_bar.hpp
include/bolt/core/: bandwidth_prober.hpp  config.hpp  download_engine.hpp  download_meta.hpp  error.hpp  http_session.hpp  segment.hpp  url.hpp
include/bolt/disk/: async_file.hpp  error.hpp  file_writer.hpp  write_coalescer.hpp
include/bolt/gui/: about_dialog.hpp  add_dialog.hpp  download_widget.hpp  main_window.hpp  segment_widget.hpp  settings_dialog.hpp  speed_graph.hpp  tray_icon.hpp
include/bolt/media/: dash_parser.hpp  hls_parser.hpp  media_downloader.hpp
src/bolt/browser/: CMakeLists.txt  native_host.cpp
src/bolt/cli/: CMakeLists.txt  commands.cpp  compat.hpp  main.cpp  progress_bar.cpp
src/bolt/core/: CMakeLists.txt  bandwidth_prober.cpp  download_engine.cpp  download_meta.cpp  http_session.cpp  segment.cpp  url.cpp
src/bolt/disk/: CMakeLists.txt  async_file.cpp  file_writer.cpp  write_coalescer.cpp
src/bolt/gui/: CMakeLists.txt  about_dialog.cpp  add_dialog.cpp  download_widget.cpp  main.cpp  main_window.cpp  segment_widget.cpp  settings_dialog.cpp  speed_graph.cpp  tray_icon.cpp
src/bolt/media/: CMakeLists.txt  dash_parser.cpp  hls_parser.cpp  media_downloader.cpp
test_compile/: test.cpp
tests/: CMakeLists.txt  bandwidth_tests.cpp  download_meta_tests.cpp  main.cpp  segment_tests.cpp  url_tests.cpp
tools/: benchmark.py  requirements.txt
